--- a/4.Datasets.ipynb
+++ b/4.Datasets.ipynb
@@ -110,6 +110,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -148,7 +155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### You can preprocess faster by using the option batched=True, the applied function will then receive multiple examples at each call"
+    "#### You can preprocess faster by using the option batched=True, the applied function will then receive multiple examples at each call, the process can be accelerate by processing several elements at the same time"
    ]
   },
   {
