--- a/6.dynamic_padding.ipynb
+++ b/6.dynamic_padding.ipynb
@@ -113,12 +113,12 @@
    "metadata": {},
    "source": [
     "#### The DataCollatorXXX library is responsible for applying all the final processing needed before forrming a batch. \n",
-    "#### To apply dynamic padding, we postpone the padding in the preprocessing function, use the ***DataCollatorWithPadding*** instance as the input of the ***collate_fn*** for the ***DataLoader*** parameter"
+    "#### To apply dynamic padding, we postpone the padding in the preprocessing function, use the ***DataCollatorWithPadding*** instance as the input of the ***collate_fn*** for the ***DataLoader*** parameter , the batches will generated at various feature length"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -132,35 +132,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f127a8059aa340d3908716a0739883e4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/3668 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9720c49597af4929a24a9e75adce1b75",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Map:   0%|          | 0/408 [00:00<?, ? examples/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d3742316039341b4a909194a0e0b1e71",
+       "model_id": "26b40e00000e4e449088b76b4d3cbf3d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -191,9 +163,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([16, 77])\n",
+      "torch.Size([16, 63])\n",
+      "torch.Size([16, 73])\n",
+      "torch.Size([16, 78])\n",
+      "torch.Size([16, 77])\n",
+      "torch.Size([16, 82])\n",
+      "torch.Size([16, 78])\n"
+     ]
+    }
+   ],
    "source": [
     "from torch.utils.data import DataLoader\n",
     "from transformers import DataCollatorWithPadding\n",
@@ -202,7 +188,12 @@
     "\n",
     "train_dataloader = DataLoader(\n",
     "    tokenized_datasets[\"train\"], batch_size=16, shuffle=True, collate_fn=data_collator\n",
-    ")"
+    ")\n",
+    "\n",
+    "for step, batch in enumerate(train_dataloader):\n",
+    "    print(batch[\"input_ids\"].shape)\n",
+    "    if step> 5: \n",
+    "        break"
    ]
   }
  ],
