--- a/7.trainer.ipynb
+++ b/7.trainer.ipynb
@@ -754,14 +754,100 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### To monitor metrics during training, we need to define a compute_metrics function and pass it to the ***Trainer***"
+    "#### To monitor metrics during training, we need to define a compute_metrics function and pass it to the ***compute_metrics*** argument in ***Trainer***"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/qiyaoxue/miniconda3/envs/python3.10/lib/python3.10/site-packages/transformers/training_args.py:1525: FutureWarning: `evaluation_strategy` is deprecated and will be removed in version 4.46 of 🤗 Transformers. Use `eval_strategy` instead\n",
+      "  warnings.warn(\n",
+      "Some weights of BertForSequenceClassification were not initialized from the model checkpoint at bert-base-cased and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
+      "/home/qiyaoxue/miniconda3/envs/python3.10/lib/python3.10/site-packages/torch/nn/parallel/_functions.py:68: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
+      "  warnings.warn('Was asked to gather along dimension 0, but all '\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='345' max='345' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [345/345 00:45, Epoch 3/3]\n",
+       "    </div>\n",
+       "    <table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       " <tr style=\"text-align: left;\">\n",
+       "      <th>Epoch</th>\n",
+       "      <th>Training Loss</th>\n",
+       "      <th>Validation Loss</th>\n",
+       "      <th>Accuracy</th>\n",
+       "      <th>F1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>No log</td>\n",
+       "      <td>0.416271</td>\n",
+       "      <td>0.803922</td>\n",
+       "      <td>0.862069</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>No log</td>\n",
+       "      <td>0.405454</td>\n",
+       "      <td>0.830882</td>\n",
+       "      <td>0.886326</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>No log</td>\n",
+       "      <td>0.512424</td>\n",
+       "      <td>0.862745</td>\n",
+       "      <td>0.905085</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table><p>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/qiyaoxue/miniconda3/envs/python3.10/lib/python3.10/site-packages/torch/nn/parallel/_functions.py:68: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
+      "  warnings.warn('Was asked to gather along dimension 0, but all '\n",
+      "/home/qiyaoxue/miniconda3/envs/python3.10/lib/python3.10/site-packages/torch/nn/parallel/_functions.py:68: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
+      "  warnings.warn('Was asked to gather along dimension 0, but all '\n",
+      "/home/qiyaoxue/miniconda3/envs/python3.10/lib/python3.10/site-packages/torch/nn/parallel/_functions.py:68: UserWarning: Was asked to gather along dimension 0, but all input tensors were scalars; will instead unsqueeze and return a vector.\n",
+      "  warnings.warn('Was asked to gather along dimension 0, but all '\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TrainOutput(global_step=345, training_loss=0.3383853635926177, metrics={'train_runtime': 45.2622, 'train_samples_per_second': 243.117, 'train_steps_per_second': 7.622, 'total_flos': 469801233786240.0, 'train_loss': 0.3383853635926177, 'epoch': 3.0})"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "metric = load_metric(\"glue\", \"mrpc\")\n",
     "\n",
@@ -775,13 +861,14 @@
     "\n",
     "trainer = Trainer(\n",
     "    model=model,\n",
-    "    TrainingArguments=training_args,\n",
+    "    args=training_args,\n",
     "    train_dataset=tokenized_datasets[\"train\"],\n",
     "    eval_dataset=tokenized_datasets[\"validation\"],\n",
     "    data_collator=data_collator,\n",
     "    tokenizer=tokenizer,\n",
     "    compute_metrics=compute_metrics\n",
-    ")"
+    ")\n",
+    "trainer.train()"
    ]
   }
  ],
