--- a/3.tokenizer.ipynb
+++ b/3.tokenizer.ipynb
@@ -345,11 +345,183 @@
     "output = model(all_ids, attention_mask)\n",
     "print(output.logits)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training a new tokenizer\n",
+    "#### The tokenizer can be retrained using the ***AutoTokenizer.train_new_from_iterator*** method\n",
+    "* 1. Gathering a corpus of texts\n",
+    "* 2. Choose a tokenizer architecture\n",
+    "* 3. Train the tokenizer on the corpus\n",
+    "* 4. Save the results "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1. Gather a corpus of texts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/qiyaoxue/miniconda3/envs/python3.10/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DatasetDict({\n",
+      "    train: Dataset({\n",
+      "        features: ['repository_name', 'func_path_in_repository', 'func_name', 'whole_func_string', 'language', 'func_code_string', 'func_code_tokens', 'func_documentation_string', 'func_documentation_tokens', 'split_name', 'func_code_url'],\n",
+      "        num_rows: 412178\n",
+      "    })\n",
+      "    test: Dataset({\n",
+      "        features: ['repository_name', 'func_path_in_repository', 'func_name', 'whole_func_string', 'language', 'func_code_string', 'func_code_tokens', 'func_documentation_string', 'func_documentation_tokens', 'split_name', 'func_code_url'],\n",
+      "        num_rows: 22176\n",
+      "    })\n",
+      "    validation: Dataset({\n",
+      "        features: ['repository_name', 'func_path_in_repository', 'func_name', 'whole_func_string', 'language', 'func_code_string', 'func_code_tokens', 'func_documentation_string', 'func_documentation_tokens', 'split_name', 'func_code_url'],\n",
+      "        num_rows: 23107\n",
+      "    })\n",
+      "})\n",
+      "<class 'generator'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datasets import load_dataset\n",
+    "\n",
+    "raw_datasets = load_dataset(\"code_search_net\", \"python\", trust_remote_code=True)\n",
+    "print(raw_datasets)\n",
+    "def get_training_corpus(raw_datasets):\n",
+    "    dataset = raw_datasets[\"train\"]\n",
+    "    for start_idx in range(0, len(dataset), 1000):\n",
+    "        samples = dataset[start_idx: start_idx+1000]\n",
+    "        yield samples[\"whole_func_string\"]\n",
+    "training_corpus = get_training_corpus(raw_datasets)\n",
+    "print(type(training_corpus))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2. Choose tokenizer architecture"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/qiyaoxue/miniconda3/envs/python3.10/lib/python3.10/site-packages/transformers/tokenization_utils_base.py:1601: FutureWarning: `clean_up_tokenization_spaces` was not set. It will be set to `True` by default. This behavior will be depracted in transformers v4.45, and will be then set to `False` by default. For more details check this issue: https://github.com/huggingface/transformers/issues/31884\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import AutoTokenizer\n",
+    "\n",
+    "old_tokenizer = AutoTokenizer.from_pretrained(\"gpt2\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3. Train the tokenizer with corpus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/qiyaoxue/miniconda3/envs/python3.10/lib/python3.10/site-packages/transformers/tokenization_utils_base.py:1601: FutureWarning: `clean_up_tokenization_spaces` was not set. It will be set to `True` by default. This behavior will be depracted in transformers v4.45, and will be then set to `False` by default. For more details check this issue: https://github.com/huggingface/transformers/issues/31884\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pathlib import Path\n",
+    "new_tokenizer = old_tokenizer.train_new_from_iterator(training_corpus, 52000)\n",
+    "# save the tokenizer weight to folder\n",
+    "if not Path(\"code-search-net-tokenizer\").exists():\n",
+    "    new_tokenizer.save_pretrained(\"code-search-net-tokenizer\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "old tokenizer:['Ċ', 'def', 'Ġget', '_', 'training', '_', 'cor', 'p', 'us', '(', 'raw', '_', 'dat', 'as', 'ets', '):', 'Ċ', 'Ġ', 'Ġ', 'Ġ', 'Ġdataset', 'Ġ=', 'Ġraw', '_', 'dat', 'as', 'ets', '[\"', 'train', '\"]', 'Ċ', 'Ġ', 'Ġ', 'Ġ', 'Ġfor', 'Ġstart', '_', 'id', 'x', 'Ġin', 'Ġrange', '(', '0', ',', 'Ġlen', '(', 'dat', 'as', 'et', '),', 'Ġ1000', '):', 'Ċ', 'Ġ', 'Ġ', 'Ġ', 'Ġ', 'Ġ', 'Ġ', 'Ġ', 'Ġsamples', 'Ġ=', 'Ġdataset', '[', 'start', '_', 'id', 'x', ':', 'Ġstart', '_', 'id', 'x', '+', '1000', ']', 'Ċ', 'Ġ', 'Ġ', 'Ġ', 'Ġ', 'Ġ', 'Ġ', 'Ġ', 'Ġyield', 'Ġsamples', '[\"', 'wh', 'ole', '_', 'func', '_', 'string', '\"]', 'Ċ']\n",
+      "new tokenier:['Ċ', 'def', 'Ġget', '_', 'training', '_', 'corpus', '(', 'raw', '_', 'datasets', '):', 'ĊĠĠĠ', 'Ġdataset', 'Ġ=', 'Ġraw', '_', 'datasets', '[\"', 'train', '\"]', 'ĊĠĠĠ', 'Ġfor', 'Ġstart', '_', 'idx', 'Ġin', 'Ġrange', '(', '0', ',', 'Ġlen', '(', 'dataset', '),', 'Ġ1000', '):', 'ĊĠĠĠĠĠĠĠ', 'Ġsamples', 'Ġ=', 'Ġdataset', '[', 'start', '_', 'idx', ':', 'Ġstart', '_', 'idx', '+', '1000', ']', 'ĊĠĠĠĠĠĠĠ', 'Ġyield', 'Ġsamples', '[\"', 'whole', '_', 'func', '_', 'string', '\"]', 'Ċ']\n"
+     ]
+    }
+   ],
+   "source": [
+    "example  = \"\"\"\n",
+    "def get_training_corpus(raw_datasets):\n",
+    "    dataset = raw_datasets[\"train\"]\n",
+    "    for start_idx in range(0, len(dataset), 1000):\n",
+    "        samples = dataset[start_idx: start_idx+1000]\n",
+    "        yield samples[\"whole_func_string\"]\n",
+    "\"\"\"\n",
+    "\n",
+    "print(f\"old tokenizer:{old_tokenizer.tokenize(example)}\\nnew tokenier:{new_tokenizer.tokenize(example)}\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Pytorch",
+   "display_name": "python3.10",
    "language": "python",
    "name": "python3"
   },
@@ -363,7 +535,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
